Refactor SectorRotationAnalyzer logging and improve test assertions